Updated Border overlap issue

--- a/Module-2-assignment/css/styles.css
+++ b/Module-2-assignment/css/styles.css
@@ -20,7 +20,7 @@ body {
 .s1 {
   float: left;
   width: 20%;
-  border: 1px solid black;
+  border: 3px solid black;
   border-radius: 20px;
   background-color: blanchedalmond;
   margin-right: 10%;
@@ -28,13 +28,12 @@ body {
 .sectionHeading {
   font-size: 125%;
   border: 3px solid black;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-radius: 20px;
   width: 15%;
   height: 10%;
   overflow: hidden;
-  margin-left: 85%;
-  margin-top: 0;
+  margin-left: 80%;
+  margin-top: 10px;
 }
 .text {
   margin: 10px 10px 10px 10px;
